# fast-color-lookup

./: .gitignore  .travis.yml  README.md  data.txt  package-lock.json  package.json
data/: data.txt
lib/: bench.js  index.js
native/: Cargo.toml
native/src/: lib.rs
test/: index.js
