[package]
name = "color-search-rust"
version = "0.1.0"
authors = ["Dan Brewster <dnbrwstr@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "color_search_rust"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
kdtree = "0.5.1"
