[package]
name = "color-search-rust"
version = "0.1.0"
authors = ["Dan Brewster <dnbrwstr@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "color_search_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.10.1"
kdtree = "0.5.1"
